force-app/main/default/objects/ScenarioMessage__c/ScenarioMessage__c.object-meta.xml
<CustomObject>
    <description>The messages related to a scenario.
It will be used by the component to show the messages of the selected scenario.</description>
    <label>ScenarioMessage</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScenarioMessages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>