force-app/main/default/objects/ScenarioMessage__c/fields/ActionAfterAiMessage__c.field-meta.xml
<CustomField>
    <fullName>ActionAfterAiMessage__c</fullName>
    <label>Action after AI message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Open Email Composer</fullName>
            </value>
            <value>
                <fullName>Execute a flow</fullName>
            </value>
            <value>
                <fullName>Redirect the user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>