force-app/main/default/objects/ScenarioMessage__c/fields/AiMessage__c.field-meta.xml
<CustomField>
    <fullName>AiMessage__c</fullName>
    <description>Reply from the AI</description>
    <inlineHelpText>Reply from the AI</inlineHelpText>
    <label>AiMessage</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>