force-app/main/default/objects/ScenarioMessage__c/fields/Elements__c.field-meta.xml
<CustomField>
    <fullName>Elements__c</fullName>
    <label>Elements</label>
    <summaryForeignKey>ScenarioMessageElement__c.Message__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>