force-app/main/default/objects/ScenarioMessage__c/fields/Email_Global_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Global_Action_Name__c</fullName>
    <defaultValue>&quot;SDO_Send_Email&quot;</defaultValue>
    <label>Email Global Action Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>