force-app/main/default/objects/ScenarioMessage__c/fields/FlowName__c.field-meta.xml
<CustomField>
    <fullName>FlowName__c</fullName>
    <description>If there is a value, the flow is trigger after AI message (using flow API name)</description>
    <inlineHelpText>If there is a value, the flow is trigger after AI message</inlineHelpText>
    <label>FlowName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>