force-app/main/default/objects/ScenarioMessage__c/fields/Global_Action_Body__c.field-meta.xml
<CustomField>
    <fullName>Global_Action_Body__c</fullName>
    <inlineHelpText>Predifined value for the email body</inlineHelpText>
    <label>Global Action Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>