force-app/main/default/objects/ScenarioMessage__c/fields/Global_Action_Subject__c.field-meta.xml
<CustomField>
    <fullName>Global_Action_Subject__c</fullName>
    <inlineHelpText>The predefined value for subject</inlineHelpText>
    <label>Global Action Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>