force-app/main/default/objects/ScenarioMessage__c/fields/Global_Action_To__c.field-meta.xml
<CustomField>
    <fullName>Global_Action_To__c</fullName>
    <inlineHelpText>Predefined value for &quot;To&quot; field of the email</inlineHelpText>
    <label>Global Action To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>