force-app/main/default/objects/ScenarioMessage__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order of the message in the conversation</description>
    <inlineHelpText>The order of the message in the conversation</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>