force-app/main/default/objects/ScenarioMessage__c/fields/RedirectURL__c.field-meta.xml
<CustomField>
    <fullName>RedirectURL__c</fullName>
    <description>If there is a value, the user is redirected to the URL after AI message (and after flow execution if there is one)</description>
    <inlineHelpText>If there is a value, the user is redirected to the URL after AI message (and after flow execution if there is one)</inlineHelpText>
    <label>RedirectURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>