force-app/main/default/objects/ScenarioMessage__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <referenceTo>Scenario__c</referenceTo>
    <relationshipLabel>ScenarioMessages</relationshipLabel>
    <relationshipName>ScenarioMessages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>