force-app/main/default/objects/ScenarioMessage__c/fields/UserMessage__c.field-meta.xml
<CustomField>
    <fullName>UserMessage__c</fullName>
    <description>The initial message by the user. It can be used to automatically generate the conversation or to be informative.</description>
    <inlineHelpText>The message from the user before AI response.</inlineHelpText>
    <label>UserMessage</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>